test-suite/output/ErrorLocation_12152_1.out
File "./output/ErrorLocation_12152_1.v", line 3, characters 0-7:
Error: No product even after head-reduction.

