test-suite/output/ErrorLocation_12152_1.v
(* Reported in #12152 *)
Goal True.
intro H; auto.
Abort.
